--- a/_brand.yml
+++ b/_brand.yml
@@ -1,4 +1,6 @@
 color:
+  palette:
+    yellow-black: "#343728"
   foreground: "#ccd2b2"
   background: "#0d0519"
 logo:
@@ -7,9 +9,12 @@ typography:
   fonts:
     - family: Open Sans
     - family: Montserrat
+      weight: 500
   base: Open Sans
   headings:
     family: Montserrat
-    weight: 300
   monospace:
-    background-color: "#343728"
+    background-color: yellow-black
+defaults:
+  bootstrap:
+    navbar-bg: $brand-yellow-black
